--- a/package.json
+++ b/package.json
@@ -4,12 +4,39 @@
   "private": true,
   "homepage": "https://Domisiaxa.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^4.5.8",
+    "@material/button": "^14.0.0",
+    "@material/typography": "^14.0.0",
+    "@mui/base": "^5.0.0-beta.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.1",
+    "@mui/styled-engine": "^5.12.3",
+    "@mui/styled-engine-sc": "^5.12.0",
+    "@mui/system": "^5.13.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "css-loader": "^6.7.4",
+    "enhanced-resolve": "^5.14.0",
+    "nanoid": "^4.0.2",
+    "node-modules": "^1.0.1",
+    "postcss-loader": "^7.3.0",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-dom": "^18.2.0",
+    "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.2",
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
+    "source-map-loader": "^4.0.1",
+    "styled-components": "^5.3.10",
+    "tapable": "^2.2.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
